# receipt-recognizer

./: .dockerignore  .env.template  .gitignore  Dockerfile  build.sh  config.yaml  db.py  formrecognizer.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
server/: app.js  package-lock.json  package.json
